fix javadoc and comments